# bank-transaction-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  bank-transaction-system.postman_collection.json  docker-compose.yml
.github/: copilot-instructions.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260505_1545_initial_schema.py  20260507_add_card_fields.py  20260507_add_sessions_token_hash_index.py  20260507_add_user_id_to_transaction_history.py  20260508_add_session_history.py
backend/app/: __init__.py  deps.py  main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: accounts.py  admin_auth.py  admin_backoffice.py  auth.py  customer_auth.py  internal.py  transactions.py
backend/app/core/: __init__.py  config.py  rate_limit.py  security.py
backend/app/crud/: account.py  audit_log.py  card.py  transaction.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  audit_log.py  card.py  transaction.py  transaction_history.py  user.py
backend/app/schemas/: account.py  audit_log.py  card.py  internal.py  transaction.py  user.py
backend/app/services/: admin_service.py  archive_service.py  auth_service.py  backup_service.py  customer_service.py  sqs_service.py  transaction_service.py  user_service.py
backend/postgres/: Dockerfile
backend/scripts/: seed_admin.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_flow.py  test_scheduled_transactions.py  test_transactions_atomicity.py
backend/tests/unit/: conftest.py  test_deps.py
backend/tests/unit/api/: __init__.py  test_accounts.py  test_admin_backoffice.py  test_auth.py  test_transactions.py
backend/tests/unit/crud/: conftest.py  test_account.py  test_audit_log.py  test_card.py  test_transaction.py  test_user.py
backend/tests/unit/services/: __init__.py  test_admin_service.py  test_archive_service.py  test_auth_service.py  test_backup_service.py  test_customer_service.py  test_internal_cron.py  test_internal_jobs.py  test_scheduled_transaction.py  test_transaction_service.py  test_user_service.py
backend/utils/: logging.py  validators.py
documents/: DESIGN_DOCUMENT.md
