[project]
name = "bank-transaction-system"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "tzdata>=2024.1",
    # Config & validation
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth & security
    "bcrypt>=4.0.0",
    # AWS
    "boto3>=1.34.0",
    # Logging
    "loguru>=0.7.2",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.7.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-passlib>=1.7.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "E", "W",   # pycodestyle
    "I",        # isort
    "UP",       # pyupgrade
    "D",        # pydocstyle
    "S",        # flake8-bandit (security)
]
ignore = [
    "D203",     # one-blank-line-before-class (conflicts with D211)
    "D212",     # multi-line-summary-first-line (conflicts with D213)
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D103",     # Missing docstring in public function (scripts)
    "D205",     # 1 blank line required between summary and description
    "D400",     # First line should end with a period
    "D401",     # First line should be in imperative mood
    "D415",     # First line should end with punctuation
    "S101",     # Use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107", "D"]
"backend/app/models/**" = ["F821"]  # SQLAlchemy string forward refs resolved at mapper config

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false  # SQLAlchemy forward refs make some ignores appear unused
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "unit: marks tests as unit tests (no real DB or network)",
    "integration: marks tests as integration tests (require Docker/Postgres container)",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
